tests/should-fail/pjass-tests/dot-as-real.j

native test takes real x returns nothing

function foo takes nothing returns nothing
    call test(.)
endfunction
